fixed navbar issue on mobile

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -22,7 +22,7 @@ body {
 
 .wrapper {
 	overflow-x: hidden;
-	position: relative;
+	/* position: relative; */
 }
 
 a {
